data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_297.wast
;; Test 8: Create a loop that includes `nop` and has complex control flow with multiple `br` and `br_if` instructions. Ensure that `nop` does not cause improper infinite loops under these conditions.

(assert_invalid
  (module
    (func $test-loop
      (loop $loop
        nop
        (br_if $loop (i32.const 0))
        (br $loop)
        (br $loop)
      )
    )
  )
  "type mismatch"
)